@@ -1,0 +1,232 @@
+/* XPM */
+static const char *print[]={
+"16 16 213 2",
+".l c None",
+"aY c None",
+".h c None",
+".j c None",
+".i c None",
+".k c None",
+".q c None",
+".b c None",
+".c c None",
+"Qt c None",
+".# c None",
+".a c None",
+".A c None",
+".m c None",
+"#p c None",
+".E c None",
+"#d c None",
+".B c None",
+".n c None",
+".Q c None",
+".C c None",
+".o c None",
+".D c None",
+".1 c None",
+".p c None",
+"bq c #000000",
+".F c #71a9ff",
+"#R c #24173b",
+".z c #587ebe",
+"bb c #000000",
+".P c #000000",
+".y c #486dab",
+".R c #729ffa",
+"#D c #000000",
+"bm c #000000",
+"ba c #000000",
+"bs c #000000",
+"#c c #000000",
+".0 c #000000",
+"br c #000000",
+"#5 c #0a060f",
+"bp c #000000",
+".r c #6ba2ff",
+"aj c #5c5d96",
+".2 c #8288e9",
+"bc c #000003",
+".g c #3a5b94",
+"#q c #7e84e8",
+"#o c #000000",
+"#E c #7b81e9",
+"#e c #8086e8",
+"b# c #000000",
+"aX c #000001",
+"az c #163c71",
+"bh c #050103",
+"bi c #000003",
+"aZ c #000216",
+"bn c #070e20",
+".3 c #8586e6",
+"#S c #7b81e9",
+"#6 c #8a90f5",
+"#b c #010103",
+"#Q c #13041f",
+"#C c #000516",
+"bo c #070d1f",
+".x c #4a6aa2",
+"ai c #190c2d",
+"bg c #040c22",
+".f c #82b6ff",
+".G c #7bacff",
+"aL c #180b26",
+"ay c #150927",
+".d c #6fa4ff",
+"a0 c #263863",
+".w c #699ae4",
+"aM c #284da6",
+"bl c #2b1b47",
+"aW c #2d2049",
+".O c #43639e",
+"#n c #243763",
+"b. c #2f1e4c",
+"bd c #233a71",
+"bj c #3e2a65",
+".4 c #799ff8",
+"#4 c #492c77",
+".Z c #233b74",
+"bk c #432d6d",
+"ak c #4c56a4",
+"aA c #a2cae2",
+".s c #b3cfff",
+"#P c #364699",
+"#B c #7490c9",
+"#F c #b5b9f4",
+"#f c #c7c9f6",
+".v c #a2b9df",
+".N c #98c2fd",
+".e c #a1c4ff",
+"#r c #c8caf6",
+"a5 c #413488",
+"bf c #5682da",
+"#1 c #5972ac",
+"#0 c #666294",
+"a1 c #7891cd",
+"#3 c #8e74b9",
+"#v c #9aa0c3",
+"#Z c #343564",
+"#J c #363865",
+"aQ c #3d61a9",
+"#K c #4e517f",
+"#u c #504779",
+"ao c #505c95",
+"#9 c #556eaf",
+"a4 c #5581d7",
+"aD c #5678c4",
+"be c #5780d2",
+"aE c #585e96",
+"#t c #5a5c99",
+"#Y c #5b5d83",
+"#L c #5f6094",
+"ae c #61648a",
+"ad c #65698f",
+"#a c #6d8cd2",
+"a6 c #6e5ba4",
+"aU c #7281ff",
+"aI c #7883fc",
+"a9 c #797bf1",
+"a. c #797db3",
+"ax c #7a79ea",
+"ap c #7b81c3",
+"aT c #7d8afd",
+"aJ c #8090ff",
+"#I c #81869f",
+"an c #87a0d7",
+"aV c #888af1",
+"aK c #8d86e9",
+"#2 c #8d8ab7",
+"#X c #8f91ad",
+"ah c #907fd5",
+"aR c #9195c8",
+"aN c #91a2c9",
+"a8 c #96a0ff",
+"aw c #97a3ff",
+"aC c #97a4c6",
+"aF c #a0a5de",
+"aq c #a1a0c6",
+".S c #a3c7ff",
+"#M c #aab5e2",
+"#h c #abb8f2",
+"al c #b3d3ee",
+"#w c #b4c6ef",
+"#m c #b6cffe",
+".8 c #b7d1ff",
+"ac c #b8bbd5",
+".7 c #b8d1ff",
+"#T c #bac0f9",
+"aS c #bac3ff",
+".9 c #bad2ff",
+"#H c #bbbec9",
+"#k c #bdd4ff",
+"#g c #bec0f5",
+"#l c #bfd6ff",
+"am c #bfd7f6",
+"#. c #c0d5ff",
+"#z c #c0d6ff",
+"#8 c #c1dbfd",
+"#y c #c2daff",
+"#O c #c5deff",
+".V c #c9ddff",
+"#j c #c9deff",
+"#N c #c9dfff",
+"a7 c #caceff",
+"#A c #cbe0ff",
+"av c #ced3ff",
+"#x c #cee7ff",
+".W c #cfdfff",
+"a# c #d1d3f4",
+"aH c #d2d7ff",
+".M c #d2e1fc",
+"#7 c #d4d0f9",
+".U c #d5e3ff",
+"#U c #d7daff",
+".X c #d7e5ff",
+"aG c #d8ddff",
+"## c #d8e9ff",
+"af c #d9dcec",
+"aO c #dbe5fc",
+"#W c #e0e2ec",
+".6 c #e1ecff",
+".Y c #e1edfe",
+"au c #e2e6ff",
+".H c #e4eeff",
+"a3 c #e5f4ff",
+".u c #e6f1ff",
+"ab c #e7e9f7",
+"aP c #e7f6ff",
+"at c #e8eafe",
+"aB c #e8f6ff",
+".5 c #ecf5ff",
+"ar c #edf1ff",
+"ag c #eef5ff",
+"#V c #eff0ff",
+".T c #f1f6ff",
+"#s c #f5f5f4",
+"#G c #f5f5f5",
+".L c #f5faff",
+"#i c #f6feff",
+"aa c #f9fbff",
+"a2 c #fafdff",
+".I c #fcfdff",
+"as c #fcfeff",
+".J c #fdfdff",
+".K c #fdffff",
+".t c #ffffff",
+"Qt.#.a.a.b.b.c.d.e.f.g.h.i.j.k.l",
+".m.n.o.p.q.b.r.s.t.u.v.w.x.y.z.l",
+".A.B.C.D.E.F.G.H.I.J.K.L.M.N.O.P",
+".A.B.C.C.Q.R.S.t.T.U.V.W.X.Y.Z.0",
+".A.B.1.2.3.4.5.6.7.8.9#.###a#b#c",
+".A#d#e#f#g#h#i#j.7#k#l.V#m#n#o.l",
+"#p#q#r#s#t#u#v#w#x#y#z#A#B#C#D.l",
+"#E#F.t#G#H#I#J#K#L#M#N#O#P#Q#R.l",
+"#S#T#U#V.t.t#W#X#Y#Z#0#1#2#3#4#5",
+"#6#7#8#9a.a#aa.tabacadaeafagahai",
+"ajakalamanaoapaqarasatauavawaxay",
+"azaA.t.t.taBaCaDaEaFaGaHaIaJaKaL",
+"aMaNaO.t.t.t.taPaQaRaSaTaUaVaWaX",
+"aYaZa0a1a2.ta3a4a5a6a7a8a9b.b#ba",
+".l.lbbbcbdbebfbgbhbibjbkblb#bm.l",
+".l.l.l.l.lbnbobpbq.l.l.0brbs.l.l"};
